# tr3x-pinr

./: .env  .gitignore  README.md  deploy.sh  deploy_setup_stack.sh  destroy.sh  keygen.sh  snaphshot.sh  ssh.sh  stack.yml  stack_setup.yml  test.sh  util.sh
.github/: cd_setup.yml
.github/workflows/: bundle.yml  cd.yml
prxy/: Cargo.toml  up.sh
prxy/src/: lib.rs  main.rs  util.rs
prxy/test/: test.sh  up.sh
test/: celesta.cid  test.sh
