[package]
name = "prxy"
version = "0.1.0"
authors = ["chiefbiiko <noah.anabiik.schwarz@gmail.com>"]
edition = "2018"

# TODO: upgrade
[dependencies]
rocket = "0.4.10"
anyhow = "1.0.31"
http = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.8"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
url = "2.1.1"