[package]
name = "prxy"
version = "0.1.0"
authors = ["chiefbiiko <noah.anabiik.schwarz@gmail.com>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
lazy-regex = "2.2.0"
regex = "1.5.4"
pretty_env_logger = "0.4.0"